# OpenGlPhysics

./: Box.cpp  Box.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  Circle.cpp  Circle.h  Figure.cpp  Figure.h  IOfile.cpp  IOfile.h  ImageLoader.cpp  ImageLoader.h  InputManager.cpp  InputManager.h  MainGame.cpp  MainGame.h  Math2D.cpp  Math2D.h  ObjectsGroup.cpp  ObjectsGroup.h  README.md  Scene.h  Shaders.cpp  Shaders.h  TextureLoader.cpp  TextureLoader.h  Vertex.h  errors.cpp  errors.h  main.cpp  picoPNG.cpp
shaders/: main.frag  shader.ps  shader.vs
